[package]
name = "belief_propagation"
version = "0.1.0"
authors = ["Julius Hermelink <julius.hermelink@unibw.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
criterion = "0.3.3"
itertools = "0.10.0"

[features]
debug_output = []
info_output = []
thread_output = []
debug_info_on_error = []
progress_output = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
